--- a/ConsoleApp.SQLite.csproj
+++ b/ConsoleApp.SQLite.csproj
@@ -12,6 +12,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Utils\" />
+    <Compile Remove="Utils\ReturnCalculator.cs" />
   </ItemGroup>
 </Project>
